# sealedbid-magicblock-per

./: .env.example  .gitignore  Anchor.toml  MAGICBLOCK-PER-KNOWLEDGE-PACK.md  MILESTONE-LEVEL-B.md  MILESTONE-LEVEL-C-1.md  MILESTONE-LEVEL-C-3a.md  MILESTONE-LEVEL-C-3b.md  PER-INTEGRATION-LOG.md  README.md  SCOPE-LEVEL-B.md  SLIDES.md  SPEC.md  UI-SPEC.md  build-slides.ts  config.ts  demo-run.ts  package-lock.json  package.json  render-slides.scpt  server.ts  tsconfig.json
agents/: agent.ts  requester.ts  types.ts
auction/: coordinator.ts  onchain-coordinator.ts  seal.ts  settle.ts
clients/: delegate-job.ts  post-job.ts  submit-bid-nontee.ts  submit-bid.ts
idl/: sealedbid.json
programs/sealedbid/: Cargo.toml
programs/sealedbid/src/: lib.rs
scripts/: bootstrap-providers.ts  check-per.ts  fund-wallets.ts  gen-wallets.ts  load-wallet.ts
tests/: sealedbid.test.ts
ui/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
ui/src/: App.tsx  types.ts  vite-env.d.ts
ui/src/components/: Arcade.tsx  AuctionCard.tsx  DemoBanner.tsx  LeftPane.tsx  MainnetCard.tsx  RightPane.tsx
ui/src/hooks/: useAuctionFeed.ts
