[package]
name = "sealedbid"
version = "0.1.0"
description = "On-chain sealed-bid auction with PER delegation (Level B)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sealedbid"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
ephemeral-rollups-sdk = { version = "0.11.2", features = ["anchor"] }
